# Django_proj

Django_proj/: pyproject.toml
Django_proj/quotes/: .example.env
Django_proj/quotes/quoteapp/: forms.py  models.py  urls.py  views.py
Django_proj/quotes/quoteapp/features/: scraping.py
Django_proj/quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_quote_quote.py  0003_alter_author_born_location_alter_author_fullname.py  0004_alter_tag_name.py
Django_proj/quotes/quoteapp/templates/quoteapp/: author.html  author_detail.html  base.html  detail.html  index.html  quote.html  scrapy.html
Django_proj/quotes/quoteapp/templatetags/: extract_tags.py
Django_proj/quotes/quotes/: settings.py  urls.py
Django_proj/quotes/users/: views.py
